js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithCrossModuleInliner/lib2/l2inlineGlobalVar.11.kt
inline fun inlineGlobalVarGetWrapper() =  inlineGlobalVar

inline fun inlineGlobalVarSetWrapper(v: String) { inlineGlobalVar = v }

inline fun inlineGlobalVarWrapper(): String {
    return inlineGlobalVarGetWrapper()
}
